k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: family-day-prod
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
