k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: family-day-web
spec:
  rules:
    - host: family.shahmilsaari.my
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: family-day-web
                port:
                  number: 80
